<resources>
    <string name="app_name">Hastar Fitness</string>
    <string name="very_little">Very Little</string>
    <string name="oneToThree">1–3 Times a Week</string>
    <string name="threeToFive">3–5 Times a Week</string>
    <string name="sixToSeven">6–7 Times a Week</string>
    <string name="seven">7 Times a Week</string>
    <string name="title_activity_dashboard">ActivityDashboard</string>
    <string name="title_home">Home</string>
    <string name="title_tools">Tools</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_get_gender">What is your Gender?</string>
    <string name="title_activity_get_age">What is your Birth-date?</string>
    <string name="title_activity_get_height">What is your height?</string>
    <string name="title_activity_get_weight">What is your weight?</string>
    <string name="title_activity_get_goal_weight">What is your goal weight?</string>
    <string name="title_activity_get_activity_level">What is your weekly activity?</string>
    <string name="title_activity_get_body_information">Body Information</string>
    <string name="title_activity_get_week_goal">Weekly goal</string>
    <string name="title_activity_start_diet">Weekly goal</string>
    <string name="loading_text">Loading…</string>
    <string name="app_close_message">Please click BACK again to exit</string>
    <string name="already_acc">I already have an account</string>
    <string name="get_started">get started</string>
    <string name="title_activity_already_acc">Log in to Account</string>
    <string name="enter_age_text">Enter you age</string>
    <string name="btn_continue">continue</string>
    <string name="title_activity_study">Study</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="empty_string"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_drawer">TestDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="daily_plan">Daily Plan</string>
    <string name="library">Library</string>
    <string name="title_diet">Diet</string>
    <string name="title_activity_home">Home</string>
    <string name="title_library">Library</string>
    <string name="how_many_minutes">How many minutes?</string>
    <string name="repeat_exercises">Repeat Exercises</string>
    <string name="shuffle_exercises">Shuffle exercises</string>
    <string name="hiit">Hiit</string>
    <string name="light_cardio">Light Cardio</string>
    <string name="cardio">cardio</string>
    <string name="app_intro">Hastar Fitness provide you with customized workout plans.\n\n
                                Deliverable are Body Weight, Cardio, Yoga and Meditation. All workouts customizable according to your body specifics.\n\n
                                This is an all-rounder app, which keeps track of your body weight, daily calories burn and a separate BMI calculator.</string>
    <string name="about_us_text">We have motto of making Physical and Mental Fitness of society our priority. We are excited to bring you this "Hastar Fitness" App with a vision to make people both physically and mentally fit. Hastar Fitness App helps you to build strong immune by creating your personalized work out plans, keep track of your fitness using tools like BMI calculator, Body Fat Calculator, Macro calculator, learn Yoga, and many more stuff just in few clicks sitting at home.</string>
    <string name="start_journey">Start My Fitness Journey</string>
    <string name="app_intro_title">App Intro</string>
    <string name="end_exercise">End</string>
    <string name="basic">basic</string>
    <string name="intermediate">intermediate</string>
    <string name="advanced">advanced</string>
    <string name="body_weight">body weight</string>
    <string name="beginner">beginner</string>
    <string name="start">Start</string>
    <string name="yoga">yoga</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="body_fat_calc">Body Fat Calculator</string>
    <string name="bmr_calc">BMR Calculator</string>
    <string name="get_bmi">Get BMI</string>
    <string name="clear_fields">Clear</string>
    <string name="get_fat_percentage">Get Fat Percentage</string>
    <string name="get_macros">Get Macros</string>
    <string name="macro_calc">Macro Calculator</string>
    <string name="get_bmr">Get BMR</string>
    <string name="todays_workout">Today\'s Workout</string>
    <string name="todays_cardio">Today\'s Cardio</string>
    <string name="todays_plan_as_per_your_goal">Today\'s Plans as per your goal</string>
    <string name="more_plans_you_may_like">More Plans you may like</string>
    <string name="create_your_own_plan">Create Plan</string>
    <string name="customize">Customize</string>
    <string name="remove">Remove</string>
    <string name="save">save</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="workout">Workout</string>
    <string name="app_settings">App Settings</string>
    <string name="quote">\"The last three or four reps is what makes the muscle grow.
        This area of pain divides the champion from someone else who is not a champion.\"</string>
    <string name="report">Reports</string>
    <string name="refral_msg">Let Your Friends know about <b>Hastar Fitness</b></string>
    <string name="refer_friend">Refer Friend</string>
    <string name="weight">WEIGHT</string>
    <string name="body_fat">BODY FAT</string>
    <string name="bmi">BMI</string>
    <string name="body_state">Body State</string>
    <string name="weight_stats">Weight Stats</string>
    <string name="progress">Progress</string>
    <string name="total">Total</string>
    <string name="kcal">KCAL</string>
    <string name="workoutCapital">WORKOUT</string>
    <string name="time">TIME</string>
    <string name="time_mins">TIME (min)</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="update_weight">Update Weight</string>
    <string name="more_options">More Options</string>
    <string name="profile">Profile</string>
    <string name="today">today</string>
    <string name="exercise_performed">Exercise Performed</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="_15_min">15 min</string>
    <string name="_20_min">20 min</string>
    <string name="_30_min">30 min</string>
    <string name="nil">nil</string>
    <string name="update_body_data">Update body data</string>
    <string name="highest_weight">Highest Weight</string>
    <string name="lowest_weight">Lowest Weight</string>
    <string name="average_weight">Average Weight</string>
    <string name="to_enable_or_disable_cardio">Enable or disable cardio</string>
    <string name="select_day_of_your_choice">Select Day of your Choice</string>
    <string name="select_intensity">Select Intensity</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="exercise">EXERCISE</string>
    <string name="undo_last_delete">Undo last delete</string>
    <string name="reset_exercises">Reset exercises</string>
    <string name="edit_exercises">Edit exercises</string>
    <string name="next_up"><i>Next Up:</i></string>
    <string name="description">Description</string>
    <string name="bmi_info"><![CDATA[Underweight = 18.5 or less\nNormal weight = 18.5–24.9\nOverweight = 25–29.9\nObesity = BMI of 30 or greater]]></string>
    <string name="loss_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="your_age">Your Age</string>
    <string name="your_weight">Your Weight</string>
    <string name="your_height">Your Height</string>
    <string name="ft">ft</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="weight_lower">Weight</string>
    <string name="little_or_no_exercise">Little or no exercise</string>
    <string name="workout_3_5_days_a_week">Workout 3–5 days a week</string>
    <string name="workout_1_3_days_a_week">Workout 1–3 days a week</string>
    <string name="workout_6_7_days_a_week">Workout 6–7 days a week</string>
    <string name="feet">feet</string>
    <string name="gain_0_25kg_per_week">Gain 0.25Kg per week</string>
    <string name="gain_0_5kg_per_week">Gain 0.5Kg per week</string>
    <string name="gain_0_75kg_per_week">Gain 0.75Kg per week</string>
    <string name="gain_1kg_per_week">Gain 1Kg per week</string>
    <string name="very_hard_exercise">Very Hard exercise</string>
    <string name="breakfast">Breakfast</string>
    <string name="add">add</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="last_searched">LAST SEARCHED</string>
    <string name="my_foods">MY FOODS</string>
    <string name="you_haven_t_searched_any_food_yet">You haven\'t searched any food yet</string>
    <string name="add_your_food">add your food</string>
    <string name="no_custom_foods_created">No custom foods created</string>
    <string name="calories_expected_kcal">Calories expected (Kcal)</string>
    <string name="servings">Servings</string>
    <string name="grams">Grams</string>
    <string name="protein">Protein</string>
    <string name="protein_kcal">Protein (kcal)</string>
    <string name="carbs_kcal">Carbs (kcal)</string>
    <string name="carbs_gm">carbs (gm)</string>
    <string name="protein_gram">Protein (gm)</string>
    <string name="name_of_food">Name of food</string>
    <string name="calories_expected">calories expected</string>
    <string name="calories_kcal">Calories (kcal)</string>
    <string name="measurement">Measurement</string>
    <string name="nutrition">Nutrition</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="select">select</string>
    <string name="calories">Calories</string>
    <string name="add_food">Add Food</string>
    <string name="lunch">Lunch</string>
    <string name="per_serving_grams">Per serving Grams</string>
    <string name="per_100_gram">per 100 gram</string>
    <string name="set_diet">set diet</string>
    <string name="click_here_to_set_diet">click here to set diet</string>
    <string name="default_web_client_id">965913102895-ohskq5s4j2q9naulo53guc1nnvnqgnnt.apps.googleusercontent.com</string>
    <string name="select_birth_date">Select Birth-date</string>
    <string name="your_birth_date">Your Date of Birth</string>
    <string name="download_plan">Download Plan</string>
    <string name="please_download_plan_before_starting_workout">Please Download Plan Before Starting Workout</string>
    <string name="select_base_plan">Select Base Plan</string>
    <string name="plyometrics">Plyometrics</string>
    <string name="joint_friendly">Joint Friendly</string>
    <string name="click_on_below_button_to_setup_your_diet_for_first_time">click on below button to setup your diet for first time</string>
    <string name="loading_app_for_the_first_time">Just a moment while we build your Daily Plan</string>
</resources>