<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hastarfitness.hastarfitnessapp.appFragmentsUI.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.hastarfitness.hastarfitnessapp.appFragmentsUI.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.hastarfitness.hastarfitnessapp.appFragmentsUI.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.hastarfitness.hastarfitnessapp.appFragmentsUI.diet.DietFragment"
        android:label="@string/title_diet"
        tools:layout="@layout/fragment_diet" />
</navigation>
