<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diet.CreateNewFoodActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".diet.CreateNewFoodActivity"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:text="@string/name_of_food"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/waistInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_food"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="138dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:text="@string/calories_expected"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calories_kcal"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="138dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calories_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:text="@string/measurement"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:checked="true"
                android:id="@+id/serving_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servings"/>
            <RadioButton
                android:id="@+id/gram_radioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grams"/>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/servingsUnit_View"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/per_serving_grams"
            android:layout_marginLeft="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/servingsOrGrams_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:text="@string/nutrition"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/protein_gram"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="138dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/protein_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carbs_gm"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="138dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/carbs_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="fat (gm)"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="138dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fat_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addFood_button"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/blue_diet_button_background"
        android:text="@string/add_your_food"/>





</LinearLayout>
</ScrollView>