<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="false">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/weely_diet_goal_banner_image"/>
    <LinearLayout
        android:id="@+id/maintainWt_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <Button
            android:id="@+id/maintainWeight_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="Diet Goal: Maintain Weight"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:padding="18dp">

        <Button
            android:id="@+id/_250GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/gain_0_25kg_per_week"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/_500GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClick"
            android:text="@string/gain_0_5kg_per_week"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/_750GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:layout_marginBottom="10dp"
            android:text="@string/gain_0_75kg_per_week"
            android:textAllCaps="false"
            android:textSize="14sp" />
        <Button
            android:id="@+id/_1000GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:text="@string/gain_1kg_per_week"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </LinearLayout>


</RelativeLayout>