<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="false">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0dip"
        android:paddingTop="15.0dip"
        android:paddingBottom="15.0dip"
        android:paddingRight="15.0dip"
        android:text="Goal"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        android:padding="18dp">

        <Button
            android:id="@+id/_250GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/diet_buttons_background_selected"
            android:onClick="onClick"
            android:text="@string/gain_0_25kg_per_week"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/_500GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/diet_unselected_faint_border"
            android:onClick="onClick"
            android:text="@string/gain_0_5kg_per_week"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <Button
            android:id="@+id/_750GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/diet_unselected_faint_border"
            android:onClick="onClick"
            android:layout_marginBottom="10dp"
            android:text="@string/gain_0_75kg_per_week"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="14sp" />
        <Button
            android:id="@+id/_1000GmAWeek"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/diet_unselected_faint_border"
            android:onClick="onClick"
            android:text="@string/gain_1kg_per_week"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textSize="14sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/weeklyGoalToDiet"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_right_arrow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="30dp"/>



</RelativeLayout>